[bumpversion]
files = package.json pyworkplace/__init__.py
commit = False
tag = False
current_version = 0.0.0

[bumpversion:file:setup.cfg]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:package.json]
search = {current_version}
replace = {new_version}

[metadata]
description-file = README.md

[flake8]
extend-ignore = E203, E266, E501
# line length is intentionally set to 80 here because black uses Bugbear
# See https://github.com/psf/black/blob/master/docs/the_black_code_style.md#line-length for more details
max-line-length = 80
max-complexity = 18
select = B,C,E,F,W,T4,B9
# We need to configure the mypy.ini because the flake8-mypy's default
# options don't properly override it, so if we don't specify it we get
# half of the config from mypy.ini and half from flake8-mypy.
mypy_config = mypy.ini

[pycodestyle]
max-line-length = 100
exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules

[wheel]
universal = 1

[aliases]
test = pytest

[tool:pytest]
norecursedirs = "extras" "build" "docs" "docs[\/]_build" ".egg" "node_modules" "provision" "staticfiles" "requirements"
addopts =
	-s -v
	--cov pyfacebook
	--cov-report html
	--no-cov-on-fail
	--capture=no
	--ignore setup.py
	--ignore test_envs.py
	--ignore docs
	--ignore .egg
	--ignore .eggs
	--ignore .mypy_cache
	--ignore provision
	--ignore staticfiles
	--ignore node_modules
	--doctest-modules
